fix(telecom.sms): disable the add and remove ip if update ip status
ref: MANAGER-10805

Signed-off-by: Guillaume Hyenne <guillaume.hyenne@ovhcloud.com>

--- a/packages/manager/modules/sms/src/sms/options/smppParameter/allowed-ips/allowed-ips.html
+++ b/packages/manager/modules/sms/src/sms/options/smppParameter/allowed-ips/allowed-ips.html
@@ -21,6 +21,7 @@
                             <oui-button
                                 size="s"
                                 variant="secondary"
+                                data-disabled="$ctrl.status === 'UPDATING_IP'"
                                 data-on-click="$ctrl.openModal('remove', ip)"
                             >
                                 <span class="oui-icon oui-icon-bin"></span>
@@ -37,7 +38,7 @@
                 data-variant="secondary"
                 data-on-click="$ctrl.openModal('add')"
                 data-icon-right="oui-icon-plus"
-                data-disabled="$ctrl.ips.length === $ctrl.MAX_ALLOWED_IP"
+                data-disabled="$ctrl.ips.length === $ctrl.MAX_ALLOWED_IP || $ctrl.status === 'UPDATING_IP'"
             >
                 <span
                     data-translate="sms_options_smpp_parameter_allowed_ips_button_add"
