--- a/packages/manager/modules/sms/src/sms/options/smppParameter/smppParameter.html
+++ b/packages/manager/modules/sms/src/sms/options/smppParameter/smppParameter.html
@@ -23,6 +23,8 @@
     <ovh-manager-sms-options-smpp-parameter-allowed-ips
         class="col-sm-4"
         data-service-name="$ctrl.serviceName"
+        data-status="$ctrl.smppSettings.status"
+        data-check-status="$ctrl.checkStatus()"
     >
     </ovh-manager-sms-options-smpp-parameter-allowed-ips>
 
