fix(container): hpc sidebar, nutanix order
Signed-off-by: Florian Renaut <florian.renaut@corp.ovh.com>

--- a/packages/manager/apps/dedicated/client/app/index.html
+++ b/packages/manager/apps/dedicated/client/app/index.html
@@ -57,7 +57,7 @@
                         data-ng-class="{
                             'col-md-3': !$ctrl.isMenuSidebarVisible,
                         }"
-                        data-ng-if="!ctrl.hasContainerSidebar && !$ctrl.isMenuSidebarVisible && $ctrl.displayAccountSidebar"
+                        data-ng-if="!$ctrl.hasContainerSidebar && !$ctrl.isMenuSidebarVisible && $ctrl.displayAccountSidebar"
                         data-sidebar-menu
                         data-sidebar-namespace="'account'"
                     ></div>
