fix: pr comments
DATATR-68

Signed-off-by: Jonathan Perchoc <jonathan.perchoc@ovhcloud.com>

--- a/packages/manager/modules/pci/src/projects/project/ai-dashboard/onboarding/onboarding.html
+++ b/packages/manager/modules/pci/src/projects/project/ai-dashboard/onboarding/onboarding.html
@@ -3,12 +3,12 @@
     <div class="row my-2">
         <!-- AI Pipeline-->
         <div class="col">
-            <ai-pipeline
+            <pci-project-ai-pipeline
                 data-on-storage-click="$ctrl.trackAndGoToObjectStorage()"
                 data-on-notebook-click="$ctrl.trackAndGoToAINotebooks()"
                 data-on-training-click="$ctrl.trackAndGoToAITraining()"
                 data-on-deploy-click="$ctrl.trackAndGoToAIDeploy()"
-            ></ai-pipeline>
+            ></pci-project-ai-pipeline>
         </div>
     </div>
     <!-- Second Row: benefts & tutos & marketplace -->
