feat(dedicated.ip): add service list
ref: MANAGER-10705
Signed-off-by: Yann Lojewski <yann.lojewski.ext@ovhcloud.com>

--- a/packages/manager/apps/dedicated/client/app/ip/ip.html
+++ b/packages/manager/apps/dedicated/client/app/ip/ip.html
@@ -1,4 +1,5 @@
 <div data-ui-view="ipview">
+    <div data-ovh-alert="ip_error"></div>
     <header class="oui-header">
         <div class="oui-header__container">
             <h1 class="oui-header__title">
