fix: ssl and backup translations (#8697)
ref: DATATR-169
Signed-off-by: Jonathan Perchoc <jonathan.perchoc@ovhcloud.com>

--- a/packages/manager/modules/pci/src/projects/project/storages/databases/database/general-information/general-information.html
+++ b/packages/manager/modules/pci/src/projects/project/storages/databases/database/general-information/general-information.html
@@ -342,7 +342,7 @@
                 >
                     <oui-tile-description>
                         <span
-                            data-translate="{{'pci_databases_general_information_' + $ctrl.database.getSSLModeKey($ctrl.endpoint.sslMode)}}"
+                            data-translate="{{$ctrl.getSSLKeyTranslation()}}"
                         ></span>
                     </oui-tile-description>
                 </oui-tile-definition>
