--- a/packages/manager/modules/pci/src/projects/project/storages/databases/database/general-information/general-information.html
+++ b/packages/manager/modules/pci/src/projects/project/storages/databases/database/general-information/general-information.html
@@ -241,7 +241,7 @@
                         ></p>
                         <button
                             class="oui-tile__button oui-button oui-button_ghost oui-button_block"
-                            data-ng-if="$ctrl.database.disk.size < $ctrl.getCurrentFlavor().maxDiskSize"
+                            data-ng-if="$ctrl.database.disk.type !== $ctrl.DISK_TYPE.LOCAL_SSD && $ctrl.database.disk.size < $ctrl.getCurrentFlavor().maxDiskSize"
                             data-ng-click="$ctrl.upgradeStorage()"
                             data-ng-disabled="!$ctrl.database.isActive()"
                         >
