--- a/packages/manager/apps/sign-up/src/form/form.html
+++ b/packages/manager/apps/sign-up/src/form/form.html
@@ -8,6 +8,8 @@
     <ovh-sign-up-form
         data-action="create"
         data-me="$ctrl.me"
+        data-model="$ctrl.model"
+        data-is-valid="$ctrl.isValid"
         data-on-rules-updated="$ctrl.onRulesUpdated.bind($ctrl)"
     >
         <oui-stepper
@@ -24,7 +26,7 @@
             <oui-step-form
                 data-header="{{ 'sign_up_form_details_step_title' | translate }}"
                 data-on-focus="$ctrl.onStepFocus('details')"
-                data-on-cancel="$ctrl.onStepCancel('details')"
+                data-on-cancel="$ctrl.onStepFormCancel('details')"
                 data-ng-class="{ 'oui-stepper__step_form_active': $ctrl.isActiveStep('details') }"
                 data-prevent-next="true"
                 data-ng-if="!$ctrl.loading.init"
@@ -38,10 +40,11 @@
             <oui-step-form
                 data-header="{{ $ctrl.me.model.legalform !== 'individual' ? 'sign_up_form_activity_step_title' : 'sign_up_form_other_informations_step_title' | translate }}"
                 data-on-focus="$ctrl.onStepFocus('activity')"
-                data-on-cancel="$ctrl.onStepCancel('activity')"
+                data-on-cancel="$ctrl.onStepFormCancel('activity')"
                 data-ng-class="{ 'oui-stepper__step_form_active': $ctrl.isActiveStep('activity') }"
                 data-ng-if="!$ctrl.loading.init && $ctrl.isActivityStepVisible"
                 data-prevent-next="true"
+                data-valid="$ctrl.isValid"
             >
                 <div data-ui-view="activity"></div>
             </oui-step-form>
