--- a/packages/manager/modules/sign-up/src/form/activity/activity.html
+++ b/packages/manager/modules/sign-up/src/form/activity/activity.html
@@ -1,5 +1,5 @@
 <div class="sign-up-form-activity">
-    <div class="row">
+    <div class="row" data-ng-if="!$ctrl.siretFieldIsAvailable()">
         <!-- Should only be visible when country IT and legalform individual -->
         <div
             class="col-lg-6"
@@ -134,5 +134,17 @@
             </oui-field>
             <!-- /input[name="italianSDI"] -->
         </div>
+    </div>
+
+    <div data-ng-if="$ctrl.siretFieldIsAvailable()">
+        <siret-component
+            data-country="$ctrl.signUpFormCtrl.model.country"
+            data-model="$ctrl.signUpFormCtrl.model"
+            data-rules="$ctrl.signUpFormCtrl.rules"
+            data-tracking-mode="'creation'"
+            data-is-valid="$ctrl.signUpFormCtrl.isValid"
+            data-form-ctrl="$ctrl.formCtrl"
+            data-on-field-error="$ctrl.onFieldError"
+        ></siret-component>
     </div>
 </div>
