--- a/packages/manager/modules/pci/src/projects/project/storages/cold-archive/onboarding/onboarding.html
+++ b/packages/manager/modules/pci/src/projects/project/storages/cold-archive/onboarding/onboarding.html
@@ -16,7 +16,10 @@
         data-translate="pci_projects_project_storages_cold_archives_onboarding_content2"
     ></p>
 
-    <oui-button data-variant="primary" data-on-click="$ctrl.addColdArchive()">
+    <oui-button
+        data-variant="primary"
+        data-on-click="$ctrl.onAddColdArchiveClick()"
+    >
         <span
             data-translate="pci_projects_project_storages_cold_archives_onboarding_action_label"
         ></span>
