--- a/packages/manager/modules/pci/src/projects/project/storages/cold-archive/containers/containers.html
+++ b/packages/manager/modules/pci/src/projects/project/storages/cold-archive/containers/containers.html
@@ -65,7 +65,7 @@
                 <!--Action: add user-->
                 <oui-action-menu-item
                     data-ng-if="$ctrl.constructor.isActionAddUserAvailable($row)"
-                    data-on-click="$ctrl.goToAddUserToContainer($row)"
+                    data-on-click="$ctrl.onClickOnAddUsertoContainer($row)"
                 >
                     <span
                         data-translate="pci_projects_project_storages_cold_archive_container_action_add_user"
@@ -75,7 +75,7 @@
                 <!--Action: archive container-->
                 <oui-action-menu-item
                     data-ng-if="$ctrl.constructor.isActionArchiveAvailable($row)"
-                    data-on-click="$ctrl.goToArchiveContainer($row)"
+                    data-on-click="$ctrl.onClickOnArchiveContainer($row)"
                 >
                     <span
                         data-translate="pci_projects_project_storages_cold_archive_container_action_archive"
@@ -85,7 +85,7 @@
                 <!--Action: restored container-->
                 <oui-action-menu-item
                     data-ng-if="$ctrl.constructor.isActionRestoredAvailable($row)"
-                    data-on-click="$ctrl.goToRestoreContainer($row)"
+                    data-on-click="$ctrl.onClickOnRestoreContainer($row)"
                 >
                     <span
                         data-translate="pci_projects_project_storages_cold_archive_container_action_restore"
@@ -95,7 +95,7 @@
                 <!--Action: flush container-->
                 <oui-action-menu-item
                     data-ng-if="$ctrl.constructor.isActionFlushContainerAvailable($row)"
-                    data-on-click="$ctrl.goToFlushArchive($row)"
+                    data-on-click="$ctrl.onClickOnFlushContainer($row)"
                 >
                     <span
                         data-translate="pci_projects_project_storages_cold_archive_container_action_flush_archive"
@@ -104,7 +104,7 @@
                 <!--Action: delete container-->
                 <oui-action-menu-item
                     data-ng-if="$ctrl.constructor.isActionDeleteContainerAvailable($row)"
-                    data-on-click="$ctrl.goToDeleteContainer($row)"
+                    data-on-click="$ctrl.onClickOnDeleteContainer($row)"
                 >
                     <span
                         data-translate="pci_projects_project_storages_cold_archive_container_action_delete_container"
@@ -116,10 +116,7 @@
         <oui-datagrid-topbar>
             <button
                 class="oui-button oui-button_secondary"
-                data-ng-click="$ctrl.goToAddColdArchive()"
-                data-track-on="click"
-                data-track-name="PCI_PROJECTS_CONTAINERS_ADD"
-                data-track-type="navigation"
+                data-ng-click="$ctrl.onClickOnAddContainer()"
             >
                 <span
                     class="oui-icon oui-icon-add pr-1"
