fix: pr comments
datatr-68

Signed-off-by: Jonathan Perchoc <jonathan.perchoc@ovhcloud.com>

--- a/packages/manager/modules/pci/src/projects/project/ai-dashboard/onboarding/onboarding.html
+++ b/packages/manager/modules/pci/src/projects/project/ai-dashboard/onboarding/onboarding.html
@@ -27,6 +27,7 @@
                             <div class="d-flex">
                                 <span
                                     class="icon-badge oui-icon oui-icon-cloud-hand_concept"
+                                    aria-hidden="true"
                                 ></span>
                                 <div>
                                     <h5
@@ -42,6 +43,7 @@
                             <div class="d-flex">
                                 <span
                                     class="icon-badge oui-icon oui-icon-component_concept"
+                                    aria-hidden="true"
                                 ></span>
                                 <div>
                                     <h5
@@ -59,6 +61,7 @@
                             <div class="d-flex">
                                 <span
                                     class="icon-badge oui-icon oui-icon-cloud-padlock_concept"
+                                    aria-hidden="true"
                                 ></span>
                                 <div>
                                     <h5
@@ -74,6 +77,7 @@
                             <div class="d-flex">
                                 <span
                                     class="icon-badge oui-icon oui-icon-page-certificate_concept"
+                                    aria-hidden="true"
                                 ></span>
                                 <div>
                                     <h5
@@ -91,6 +95,7 @@
                             <div class="d-flex">
                                 <span
                                     class="icon-badge oui-icon oui-icon-hand-world_concept"
+                                    aria-hidden="true"
                                 ></span>
                                 <div>
                                     <h5
