--- a/packages/manager/modules/pci/src/projects/project/ai-dashboard/tabs/cli/cli.html
+++ b/packages/manager/modules/pci/src/projects/project/ai-dashboard/tabs/cli/cli.html
@@ -1,14 +1,14 @@
 <div>
     <div class="row mt-3">
         <div class="col-md-8">
-            <h3 data-translate="pci_ai_dashboard_cli"></h3>
+            <h3>Command Line Interface (CLI)</h3>
             <p data-translate="pci_ai_dashboard_cli_description"></p>
             <!-- Installation -->
             <h4 data-translate="pci_ai_dashboard_cli_install"></h4>
-            <ai-code-sample
+            <pci-project-ai-code-sample
                 data-code="$ctrl.CLI_INSTALL_CODE"
                 data-language="'bash'"
-            ></ai-code-sample>
+            ></pci-project-ai-code-sample>
             <oui-message class="mt-2" data-type="info">
                 <span
                     data-translate="pci_ai_dashboard_cli_install_restart_terminal"
@@ -49,7 +49,7 @@
                 data-translate-values="{command: '<code>ovhai --help</code>'}"
             ></p>
         </div>
-        <div class="col-md-4 ">
+        <div class="col-md-4">
             <!--Documentation-->
             <div class="oui-box-block">
                 <div class="oui-box-block__heading">
