--- a/packages/manager/modules/pci/src/projects/project/ai-dashboard/tabs/users-tokens/users-tokens.html
+++ b/packages/manager/modules/pci/src/projects/project/ai-dashboard/tabs/users-tokens/users-tokens.html
@@ -11,13 +11,14 @@
     <section>
         <h4 data-translate="pci_ai_dashboard_users_tokens_users_title"></h4>
         <div class="mb-3">
-            <span
+            <p
+                class="mb-0"
                 data-translate="pci_ai_dashboard_users_tokens_users_description_1"
-            ></span>
-            <br />
-            <span
+            ></p>
+            <p
+                class="mb-0"
                 data-translate="pci_ai_dashboard_users_tokens_users_description_2"
-            ></span>
+            ></p>
         </div>
 
         <div class="mb-3">
@@ -47,13 +48,14 @@
     <section>
         <h4 data-translate="pci_ai_dashboard_users_tokens_tokens_title"></h4>
         <div class="mb-3">
-            <span
+            <p
+                class="mb-0"
                 data-translate="pci_ai_dashboard_users_tokens_tokens_description_1"
-            ></span>
-            <br />
-            <span
+            ></p>
+            <p
+                class="mb-0"
                 data-translate="pci_ai_dashboard_users_tokens_tokens_description_2"
-            ></span>
+            ></p>
         </div>
         <oui-datagrid data-page-size="10" data-rows="$ctrl.aiTokens">
             <oui-datagrid-column
@@ -80,7 +82,6 @@
                 data-filterable
                 data-sortable="asc"
             >
-                <span data-ng-bind="$row.spec.region"></span>
             </oui-datagrid-column>
             <oui-datagrid-column
                 data-title=":: 'pci_ai_dashboard_users_tokens_tokens_table_role' | translate"
