--- a/packages/manager/modules/pci/src/projects/project/storages/databases/database/dashboard.html
+++ b/packages/manager/modules/pci/src/projects/project/storages/databases/database/dashboard.html
@@ -11,6 +11,7 @@
             data-ng-if="$ctrl.isFeatureActivated('usersTab')"
             data-href="{{:: $ctrl.usersLink }}"
             data-active="$ctrl.currentActiveLink() === $ctrl.usersLink"
+            data-disabled="!$ctrl.database.isActive()"
             ><span
                 data-translate="pci_databases_dashboard_users_tab_title"
             ></span>
@@ -19,6 +20,7 @@
             data-ng-if="$ctrl.isFeatureActivated('aclTab')"
             data-href="{{:: $ctrl.aclLink }}"
             data-active="$ctrl.currentActiveLink() === $ctrl.aclLink"
+            data-disabled="!$ctrl.database.isActive()"
             ><span
                 data-translate="pci_databases_dashboard_acl_tab_title"
             ></span>
@@ -27,6 +29,7 @@
             data-ng-if="$ctrl.isFeatureActivated('userAclTab')"
             data-href="{{:: $ctrl.userAclLink }}"
             data-active="$ctrl.currentActiveLink() === $ctrl.userAclLink"
+            data-disabled="!$ctrl.database.isActive()"
             ><span
                 data-translate="pci_databases_dashboard_acl_tab_title"
             ></span>
@@ -35,6 +38,7 @@
             data-ng-if="$ctrl.isFeatureActivated('indexesTab')"
             data-href="{{:: $ctrl.indexesLink }}"
             data-active="$ctrl.currentActiveLink() === $ctrl.indexesLink"
+            data-disabled="!$ctrl.database.isActive()"
             ><span
                 data-translate="pci_databases_dashboard_indexes_tab_title"
             ></span>
@@ -43,6 +47,7 @@
             data-ng-if="$ctrl.isFeatureActivated('databaseTab')"
             data-href="{{:: $ctrl.databasesLink }}"
             data-active="$ctrl.currentActiveLink() === $ctrl.databasesLink"
+            data-disabled="!$ctrl.database.isActive()"
             ><span
                 data-translate="pci_databases_dashboard_databases_tab_title"
             ></span>
@@ -51,6 +56,7 @@
             data-ng-if="$ctrl.isFeatureActivated('backupTab')"
             data-href="{{:: $ctrl.backupsLink }}"
             data-active="$ctrl.currentActiveLink() === $ctrl.backupsLink"
+            data-disabled="!$ctrl.database.isActive()"
             ><span
                 data-translate="pci_databases_dashboard_backup_tab_title"
             ></span>
@@ -59,6 +65,7 @@
             data-ng-if="$ctrl.isFeatureActivated('allowedIpsTab')"
             data-href="{{:: $ctrl.allowedIpsLink }}"
             data-active="$ctrl.currentActiveLink() === $ctrl.allowedIpsLink"
+            data-disabled="!$ctrl.database.isActive()"
             ><span
                 data-translate="pci_databases_dashboard_allowed_ips_tab_title"
             ></span>
@@ -67,6 +74,7 @@
             data-ng-if="$ctrl.isFeatureActivated('queryStatisticsTab')"
             data-href="{{ $ctrl.queryStatisticsLink }}"
             data-active="$ctrl.currentActiveLink() === $ctrl.queryStatisticsLink"
+            data-disabled="!$ctrl.database.isActive()"
             ><span
                 data-translate="pci_databases_dashboard_query_statistics_tab_title"
             ></span>
@@ -75,6 +83,7 @@
             data-ng-if="$ctrl.isFeatureActivated('currentQueriesTab')"
             data-href="{{ $ctrl.currentQueriesLink }}"
             data-active="$ctrl.currentActiveLink() === $ctrl.currentQueriesLink"
+            data-disabled="!$ctrl.database.isActive()"
             ><span
                 data-translate="pci_databases_dashboard_current_queries_tab_title"
             ></span>
@@ -83,6 +92,7 @@
             data-ng-if="$ctrl.isFeatureActivated('poolsTab')"
             data-href="{{ $ctrl.poolsLink }}"
             data-active="$ctrl.currentActiveLink() === $ctrl.poolsLink"
+            data-disabled="!$ctrl.database.isActive()"
             ><span
                 data-translate="pci_databases_dashboard_pools_tab_title"
             ></span>
@@ -90,6 +100,7 @@
         <oui-header-tabs-item
             data-href="{{:: $ctrl.logsLink }}"
             data-active="$ctrl.currentActiveLink() === $ctrl.logsLink"
+            data-disabled="!$ctrl.database.isActive()"
             ><span
                 data-translate="pci_databases_dashboard_logs_tab_title"
             ></span>
@@ -97,6 +108,7 @@
         <oui-header-tabs-item
             data-href="{{:: $ctrl.metricsLink }}"
             data-active="$ctrl.currentActiveLink() === $ctrl.metricsLink"
+            data-disabled="!$ctrl.database.isActive()"
             ><span
                 data-translate="pci_databases_dashboard_metrics_tab_title"
             ></span>
@@ -105,6 +117,7 @@
             data-ng-if="$ctrl.isFeatureActivated('topicsTab')"
             data-href="{{:: $ctrl.topicsLink }}"
             data-active="$ctrl.currentActiveLink() === $ctrl.topicsLink"
+            data-disabled="!$ctrl.database.isActive()"
             ><span
                 data-translate="pci_databases_dashboard_topics_tab_title"
             ></span>
@@ -113,6 +126,7 @@
             data-ng-if="$ctrl.isFeatureActivated('serviceIntegrationTab')"
             data-href="{{ $ctrl.serviceIntegrationLink }}"
             data-active="$ctrl.currentActiveLink() === $ctrl.serviceIntegrationLink"
+            data-disabled="!$ctrl.database.isActive()"
             ><span
                 data-translate="pci_databases_dashboard_service_integration_tab_title"
             ></span>
@@ -129,6 +143,7 @@
             data-ng-if="$ctrl.isFeatureActivated('namespacesTab')"
             data-href="{{ $ctrl.namespacesLink }}"
             data-active="$ctrl.currentActiveLink() === $ctrl.namespacesLink"
+            data-disabled="!$ctrl.database.isActive()"
             ><span
                 data-translate="pci_databases_dashboard_namespaces_tab_title"
             ></span>
@@ -145,6 +160,7 @@
             data-ng-if="$ctrl.isFeatureActivated('advancedConfigurationTab')"
             data-href="{{ $ctrl.advancedConfigurationLink }}"
             data-active="$ctrl.currentActiveLink() === $ctrl.advancedConfigurationLink"
+            data-disabled="!$ctrl.database.isActive()"
             ><span
                 data-translate="pci_databases_dashboard_advanced_configuration_tab_title"
             ></span>
