fix(dedicated.server): correcting the hardware encart
ref:DTRSD-104380

Signed-off-by: stif59100 <steeve.vanderstocken@ovhcloud.com>

--- a/packages/manager/modules/bm-server-components/src/technical-details/technical-details.html
+++ b/packages/manager/modules/bm-server-components/src/technical-details/technical-details.html
@@ -19,6 +19,7 @@
         </oui-tile-description>
     </oui-tile-definition>
     <oui-tile-definition
+        data-ng-if="$ctrl.formattedRAM"
         term="{{:: 'dedicated_server_dashboard_technical_details_ram' | translate }}"
     >
         <oui-tile-description>
