--- a/packages/manager/modules/pci/src/projects/project/storages/cold-archive/cold-archive.html
+++ b/packages/manager/modules/pci/src/projects/project/storages/cold-archive/cold-archive.html
@@ -26,7 +26,7 @@
         ></p>
         <a
             data-ng-href="{{:: $ctrl.priceLink }}"
-            data-on-click="$ctrl.onPriceLinkClick()"
+            data-ng-click="$ctrl.onPriceLinkClick()"
             target="_blank"
             rel="noopener"
         >
