--- a/packages/manager/modules/pci/src/projects/project/storages/cold-archive/containers/containers.html
+++ b/packages/manager/modules/pci/src/projects/project/storages/cold-archive/containers/containers.html
@@ -65,7 +65,7 @@
                 <!--Action: add user-->
                 <oui-action-menu-item
                     data-ng-if="$ctrl.constructor.isActionAddUserAvailable($row)"
-                    data-on-click="$ctrl.onClickOnAddUsertoContainer($row)"
+                    data-on-click="$ctrl.onAddUsertoContainerClick($row)"
                 >
                     <span
                         data-translate="pci_projects_project_storages_cold_archive_container_action_add_user"
@@ -75,7 +75,7 @@
                 <!--Action: archive container-->
                 <oui-action-menu-item
                     data-ng-if="$ctrl.constructor.isActionArchiveAvailable($row)"
-                    data-on-click="$ctrl.onClickOnArchiveContainer($row)"
+                    data-on-click="$ctrl.onArchiveContainerClick($row)"
                 >
                     <span
                         data-translate="pci_projects_project_storages_cold_archive_container_action_archive"
@@ -85,7 +85,7 @@
                 <!--Action: restored container-->
                 <oui-action-menu-item
                     data-ng-if="$ctrl.constructor.isActionRestoredAvailable($row)"
-                    data-on-click="$ctrl.onClickOnRestoreContainer($row)"
+                    data-on-click="$ctrl.onRestoreContainerClick($row)"
                 >
                     <span
                         data-translate="pci_projects_project_storages_cold_archive_container_action_restore"
@@ -95,7 +95,7 @@
                 <!--Action: flush container-->
                 <oui-action-menu-item
                     data-ng-if="$ctrl.constructor.isActionFlushContainerAvailable($row)"
-                    data-on-click="$ctrl.onClickOnFlushContainer($row)"
+                    data-on-click="$ctrl.onFlushContainerClick($row)"
                 >
                     <span
                         data-translate="pci_projects_project_storages_cold_archive_container_action_flush_archive"
@@ -104,7 +104,7 @@
                 <!--Action: delete container-->
                 <oui-action-menu-item
                     data-ng-if="$ctrl.constructor.isActionDeleteContainerAvailable($row)"
-                    data-on-click="$ctrl.onClickOnDeleteContainer($row)"
+                    data-on-click="$ctrl.onDeleteContainerClick($row)"
                 >
                     <span
                         data-translate="pci_projects_project_storages_cold_archive_container_action_delete_container"
@@ -116,7 +116,7 @@
         <oui-datagrid-topbar>
             <button
                 class="oui-button oui-button_secondary"
-                data-ng-click="$ctrl.onClickOnAddContainer()"
+                data-ng-click="$ctrl.onAddContainerClick()"
             >
                 <span
                     class="oui-icon oui-icon-add pr-1"
@@ -128,7 +128,7 @@
             </button>
             <button
                 class="oui-button oui-button_primary ml-sm-2"
-                data-ng-click="$ctrl.onClickOnManageContainer()"
+                data-ng-click="$ctrl.onManageContainerClick()"
                 type="button"
             >
                 <span
