fix: pr comment
datatr-69

Signed-off-by: Jonathan Perchoc <jonathan.perchoc@ovhcloud.com>

--- a/packages/manager/modules/pci/src/projects/project/ai-dashboard/tabs/home/home.html
+++ b/packages/manager/modules/pci/src/projects/project/ai-dashboard/tabs/home/home.html
@@ -137,7 +137,10 @@
                         <span
                             data-translate="pci_ai_dashboard_home_tutorials_link"
                         ></span>
-                        <span class="oui-icon oui-icon-arrow-right"></span>
+                        <span
+                            class="oui-icon oui-icon-arrow-right"
+                            aria-hidden="true"
+                        ></span>
                     </button>
                 </div>
             </div>
