fix: check authorization
datatr-183

Signed-off-by: Jonathan Perchoc <jonathan.perchoc@ovhcloud.com>

--- a/packages/manager/modules/pci/src/projects/project/ai-dashboard/tabs/home/home.html
+++ b/packages/manager/modules/pci/src/projects/project/ai-dashboard/tabs/home/home.html
@@ -36,7 +36,8 @@
                                 ></span>
                                 <ovh-manager-catalog-price
                                     class="billing-price"
-                                    price="$ctrl.price"
+                                    data-price="$ctrl.price"
+                                    data-show-zero-price="true"
                                 ></ovh-manager-catalog-price>
                             </div>
                             <oui-button
