--- a/packages/manager/modules/pci/src/projects/project/data-processing/notebooks/add-notebook/notebook-sizing/notebook-sizing.html
+++ b/packages/manager/modules/pci/src/projects/project/data-processing/notebooks/add-notebook/notebook-sizing/notebook-sizing.html
@@ -82,13 +82,13 @@
             ></p>
             <p
                 data-translate="data_processing_add_notebook_template_executor_nb"
-                data-translate-values="{'nbExc': item.executorNum}"
+                data-translate-values="{'nbExc': item.executorNumber}"
             ></p>
         </oui-select-picker-section>
         <oui-select-picker-section>
             <ovh-manager-catalog-price
-                data-price="item.price"
-                data-tax="item.price"
+                data-price="0.01"
+                data-tax="0.01"
                 data-user="$ctrl.user"
                 data-perform-rounding="false"
                 data-maximum-fraction-digits="5"
