--- a/packages/manager/modules/pci/src/projects/project/data-processing/home/data-processing-home.html
+++ b/packages/manager/modules/pci/src/projects/project/data-processing/home/data-processing-home.html
@@ -85,7 +85,7 @@
                             </button>
                             <button
                                 data-placement="end"
-                                data-ng-click=""
+                                data-ng-click="$ctrl.showNotebooks()"
                                 class="oui-button oui-button_secondary oui-button_icon-left"
                                 data-track-on="click"
                                 data-track-name="public-cloud::pci::projects::project::training::jobs::add-job"
