--- a/packages/manager/modules/pci/src/projects/project/data-processing/notebooks/add-notebook/add-notebook.html
+++ b/packages/manager/modules/pci/src/projects/project/data-processing/notebooks/add-notebook/add-notebook.html
@@ -50,7 +50,7 @@
                     data-translate="data_processing_add_notebook_stepper_notebook_type_title"
                 ></h2>
                 <pci-project-data-processing-add-notebook-type-selector
-                    data-notebook-engines="$ctrl.capabilities.availableVersions"
+                    data-notebook-engines="$ctrl.capabilities"
                     data-on-change-handler="$ctrl.onChangeNotebookTypeHandler"
                 >
                 </pci-project-data-processing-add-notebook-type-selector>
@@ -83,7 +83,7 @@
                 ></h2>
                 <pci-project-data-processing-add-notebook-notebook-sizing
                     data-on-change-handler="$ctrl.onChangeSizingHandler"
-                    data-available-cluster-template="$ctrl.capabilities.templates"
+                    data-available-cluster-template="$ctrl.state.notebookEngine.templates"
                 >
                 </pci-project-data-processing-add-notebook-notebook-sizing>
                 <!-- step 5 - API -->
@@ -187,7 +187,10 @@
                                     ></a>
                                 </div>
                             </div>
-                            <span data-ng-bind="$ctrl.state.privacy"></span>
+                            <span
+                                class="pl-2"
+                                data-translate="{{'data_processing_add_notebook_spec_privacy_' + $ctrl.state.privacy.toLowerCase()}}"
+                            ></span>
                             <!-- Sizing -->
                             <div class="d-flex align-items-center mt-2">
                                 <div class="mr-2">
@@ -198,7 +201,7 @@
                                     ></a>
                                 </div>
                             </div>
-                            <div class="d-flex flex-column mb-2 pl-2">
+                            <div class="d-flex flex-column pl-2">
                                 <div class="d-flex">
                                     <span
                                         class="font-weight-bold"
@@ -233,8 +236,8 @@
                                 ></a>
                                 <strong>
                                     <ovh-manager-catalog-price
-                                        data-price="0.03"
-                                        data-tax="0.05"
+                                        data-price="0.01"
+                                        data-tax="0.01"
                                         data-user="$ctrl.user"
                                         data-perform-rounding="false"
                                         data-maximum-fraction-digits="5"
