fix(storage.cold-archive): fix next btn display in addContainer
ref: MANAGER-10756
Signed-off-by: Rafik Adiche <rafik.adiche.ext@corp.ovh.com>

--- a/packages/manager/modules/pci/src/projects/project/storages/cold-archive/add/add.html
+++ b/packages/manager/modules/pci/src/projects/project/storages/cold-archive/add/add.html
@@ -61,6 +61,7 @@
         data-on-submit="linkUserArchiveStep.display = false"
         data-editable="!$ctrl.isArchiveCreationInProgress"
         data-valid="$ctrl.isReadyForValidation()"
+        data-navigation="$ctrl.isReadyForValidation()"
         data-prevent-next="true"
     >
         <cold-archive-link-user-archive
