feat(volume-backup): use shared guides
ref: MANAGER-10573

Signed-off-by: Mohammed ZAHAF <mohammed.zahaf.ext@ovhcloud.com>

--- a/packages/manager/modules/pci/src/projects/project/storages/volume-backup/list/list.html
+++ b/packages/manager/modules/pci/src/projects/project/storages/volume-backup/list/list.html
@@ -76,8 +76,8 @@
     </oui-datagrid-column>
     <oui-datagrid-column
         data-title=":: 'pci_projects_project_storages_volume_backup_list_datagrid_column_volume' | translate"
-        data-property="volume"
-        data-type="number"
+        data-property="volumeId"
+        data-type="string"
         data-sortable
         data-filterable
     >
