--- a/packages/manager/modules/pci/src/projects/project/ai/apps/dashboard/attach-data/attach-data.html
+++ b/packages/manager/modules/pci/src/projects/project/ai/apps/dashboard/attach-data/attach-data.html
@@ -34,26 +34,26 @@
 
         <!--Table-->
         <oui-datagrid
-            rows="$ctrl.privateSwiftVolumes"
+            rows="$ctrl.dataStoreVolumes"
             page-size="::$ctrl.DATAGRID_MAX_ITEMS_PER_PAGE"
         >
             <oui-datagrid-column
                 title=":: 'pci_apps_tab_attach_data_page_volumes_column_type_swift' | translate"
                 sortable="true"
             >
-                <span data-ng-bind="$row.privateSwift.container"></span>
+                <span data-ng-bind="$row.dataStore.container"></span>
             </oui-datagrid-column>
             <oui-datagrid-column
                 title=":: 'pci_apps_tab_attach_data_page_volumes_column_prefix' | translate"
                 sortable="true"
             >
-                <span data-ng-bind="$row.privateSwift.prefix"></span>
+                <span data-ng-bind="$row.dataStore.prefix"></span>
             </oui-datagrid-column>
             <oui-datagrid-column
                 title=":: 'pci_apps_tab_attach_data_page_volumes_column_region' | translate"
                 sortable="true"
             >
-                <span data-ng-bind="$row.privateSwift.region"></span>
+                <span data-ng-bind="$row.dataStore.region"></span>
             </oui-datagrid-column>
             <oui-datagrid-column
                 title=":: 'pci_apps_tab_attach_data_page_volumes_column_mount_path' | translate"
